--- a/index.html
+++ b/index.html
@@ -13,14 +13,25 @@
       align-items: center;
       height: 100vh;
       background-color: #0242c5;
-      font-family: 'VT323', sans-serif;
-      color: #fdd600;
+    }
+
+    .content {
+      text-align: center;
     }
 
     h1 {
+      font-family: 'VT323', sans-serif;
       font-size: 8vw;
+      color: #fdd600;
       line-height: 1.2;
     }
   </style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="content">
+    <h1>Asher<sup>+</sup></h1>
+  </div>
+</body>
+</html>
