--- a/index.html
+++ b/index.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Asher Landing Page</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #0242c5;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Asher Landing Page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #0242c5;
+            color: #fdd600;
+            font-family: 'VT323', monospace;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-    .content {
-      text-align: center;
-    }
+        .text-container {
+            text-align: center;
+            animation: pulse 2s infinite;
+        }
 
-    h1 {
-      font-family: 'VT323', sans-serif;
-      font-size: 5vw;
-      color: #fdd600;
-      line-height: 1.2;
-    }
-  </style>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+        .superscript {
+            vertical-align: super;
+            font-size: 0.7em;
+            display: inline-block;
+            animation: rotate 2s linear infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        @keyframes rotate {
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-  <div class="content">
-    <h1>Asher<sup>+</sup></h1>
-  </div>
+    <div class="text-container">
+        <h1>Asher<span class="superscript">+</span></h1>
+    </div>
 </body>
 </html>
