--- a/index.html
+++ b/index.html
@@ -2,51 +2,95 @@
 <html lang="en">
 <head>
      <link rel="shortcut icon" type="image/x-icon" href="favicon.jpeg">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asher Landing Page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <title>Asher+</title>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400&family=Silkscreen" rel="stylesheet">
     <style>
         body {
-            background-color: #0242c5;
-            color: #fdd600;
-            font-family: 'VT323', monospace;
             margin: 0;
             padding: 0;
+            background-color: #edefe8;
+            background-image: linear-gradient(0deg, transparent 1px, rgba(0, 0, 0, 0.03) 1px), linear-gradient(90deg, transparent 1px, rgba(0, 0, 0, 0.03) 1px);
+            background-size: 10px 10px;
+            font-family: 'EB Garamond', serif;
+            color: #3a5a3f;
             display: flex;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
+            flex-direction: column;
             height: 100vh;
+            letter-spacing: -2px;
         }
-
-        .text-container {
+        .container {
             text-align: center;
-            animation: pulse 2s infinite;
         }
-
-        .superscript {
+        .asher {
+            font-size: 40px;
+            font-family: 'EB Garamond', serif;
+            display: inline;
+            letter-spacing: -2px;
+        }
+        .plus {
+            font-size: 30px;
+            font-family: 'Silkscreen', sans-serif;
             vertical-align: super;
-            font-size: 0.7em;
+        }
+        .contact-button {
+            opacity: 0;
+            background-color: #3a5a3f;
+            color: #edefe8;
+            border: none;
+            padding: 10px 20px;
+            margin-top: 40px;
+            text-decoration: none;
+            font-family: 'Helvetica', sans-serif;
+            font-weight: bold; /* Bold weight */
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 0;
             display: inline-block;
-            animation: rotate 2s linear infinite;
+            transition: opacity 0.5s ease;
+            letter-spacing: 0px;
+            text-transform: uppercase;
         }
-
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
-        }
-
-        @keyframes rotate {
-            100% { transform: rotate(360deg); }
+        .visible {
+            opacity: 1;
         }
     </style>
 </head>
 <body>
-    <div class="text-container">
-        <h1>Asher<span class="superscript">+</span></h1>
+    <div class="container">
+        <div id="text-container">
+            <span class="asher"></span><span class="plus"></span>
+        </div>
+        <a href="mailto:hi@asher.plus" class="contact-button" id="contact-button">Contact</a>
     </div>
+    <script>
+        const text = 'Asher+';
+        const textContainer = document.querySelector('.asher');
+        const plusSignContainer = document.querySelector('.plus');
+        const contactButton = document.getElementById('contact-button');
+        let i = 0;
+        const typingSpeed = 200;
+
+        const typeText = () => {
+            if (i < text.length) {
+                if (text.charAt(i) === '+') {
+                    plusSignContainer.innerHTML = '+';
+                } else {
+                    textContainer.innerHTML += text.charAt(i);
+                }
+                i++;
+                setTimeout(typeText, typingSpeed);
+            } else {
+                contactButton.style.opacity = '1';
+            }
+        };
+
+        window.addEventListener('load', () => {
+            setTimeout(typeText, 500);
+        });
+    </script>
 </body>
 </html>
